--- a/src/web/stylesheets/common/pages/games/style.scss
+++ b/src/web/stylesheets/common/pages/games/style.scss
@@ -22,58 +22,81 @@
 }
 
 .container {
-  width: 80%;
   margin: auto;
   margin-top: 1.5rem;
 }
 
 .all-game-cards {
-  display: flex;
-  flex-wrap: wrap;
-
   a {
     text-decoration: none;
     color: inherit;
   }
+}
 
-  .card {
-    border-radius: 1rem;
-    cursor: pointer;
+.game-card {
+  border-radius: 1rem;
+  cursor: pointer;
 
-    .card-img-top {
-      border-top-left-radius: 1rem;
-      border-top-right-radius: 1rem;
+  .level-indicator-btn {
+    position: absolute;
+    top: 12px;
+    right: 10px;
+    border-radius: 0.75rem;
+    border: none;
+    padding: 4px 8px;
+    color: gt.theme-var(text-color-2);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background: gt.theme-var(bg-2);
+    background-blend-mode: overlay;
+    backdrop-filter: blur(6px);
+
+    img {
+      width: 30px;
+      height: 30px;
+      margin-right: 0.2rem;
     }
+  }
 
-    .card-body {
-      background-color: gt.theme-var(game-card-body-bg, null, $thememaplight, $cssvars);
-      border-bottom-left-radius: 1rem;
-      border-bottom-right-radius: 1rem;
-      display: flex;
-      justify-content: space-between;
-      align-items: center;
-      padding: 0.75rem;
-    }
+  .card-img-top {
+    border-top-left-radius: 1rem;
+    border-top-right-radius: 1rem;
+  }
 
-    .card-title {
-      margin: 0;
-    }
+  .game-title {
+    color: gt.theme-var(text-color-2);
+  }
 
-    .play-btn {
-      background: white;
-      border: 0;
-      border-radius: 50%;
-      padding: 0.65rem 0.5rem;
-      margin: 0;
-      outline: none;
-      display: flex;
-      justify-content: center;
-      align-items: center;
+  .card-body {
+    padding: 0.75rem;
+    border-bottom-left-radius: 1rem;
+    border-bottom-right-radius: 1rem;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    background-color: gt.theme-var(game-card-body-bg, null, $thememaplight, $cssvars);
+  }
 
-      .play-game-icon {
-        width: 22px;
-        height: 20px;
-      }
+  .card-title {
+    margin: 0;
+  }
+
+  .play-btn {
+    margin: 0;
+    outline: none;
+    border: 0;
+    border-radius: 50%;
+    padding: 0.65rem 0.5rem;
+    background: gt.theme-var(bg-1);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    box-shadow: 0 4px 4px rgba(0, 0, 0, 0.25);
+
+    .play-game-icon {
+      width: 22px;
+      height: 20px;
     }
   }
 }
