--- a/src/web/stylesheets/common/pages/turtle/style.scss
+++ b/src/web/stylesheets/common/pages/turtle/style.scss
@@ -338,7 +338,7 @@
           .nav-item {
             .nav-link {
               color: gt.theme-var(text-color-2);
-              border: none;
+              border: unset;
               font-weight: bold;
 
               &.active {
@@ -350,7 +350,7 @@
               }
 
               &:hover {
-                border: none;
+                border: unset;
               }
             }
           }
@@ -398,7 +398,7 @@
               padding: 0 1rem;
               height: 100%;
               display: grid;
-              grid-template-rows: 50% 50%;
+              grid-template-rows: 43% 43% 14%;
 
               .turtle-mob-question-block {
                 height: 100%;
@@ -441,6 +441,7 @@
                   width: 100%;
                   padding: 1rem;
                   transition: all 0.3s ease-in-out;
+                  outline: none;
 
                   &[aria-expanded=true] {
                     border-radius: unset;
@@ -478,6 +479,26 @@
                       height: 100%;
                       width: 100%;
                     }
+                  }
+                }
+              }
+
+              .turtle-mob-hero-btn-block {
+                display: flex;
+                align-items: center;
+
+                button {
+                  background-color: gt.theme-var(game-btn-bg, null, $thememaplight, $cssvars);
+                  border-radius: 0.75rem;
+                  width: 100%;
+                  margin: 0 auto;
+                  padding: 0.75rem;
+
+                  p {
+                    color: gt.theme-var(text-color-2);
+                    font-weight: bold;
+                    font-size: 1.125rem;
+                    margin-bottom: 0;
                   }
                 }
               }
@@ -546,13 +567,14 @@
 
                 button {
                   background-color: gt.theme-var(game-btn-bg, null, $thememaplight, $cssvars);
-                  border-radius: 0.5rem;
-                  width: 100%;
+                  border-radius: 0.75rem;
+                  width: 97%;
+                  margin: auto;
                   color: gt.theme-var(text-color-2);
                   display: flex;
                   justify-content: space-between;
                   align-items: center;
-                  padding: 0.5rem;
+                  padding: 1rem;
 
                   p {
                     font-weight: bold;
@@ -596,6 +618,10 @@
 
             p {
               color: gt.theme-var(text-color-2);
+            }
+
+            &:hover {
+              border: none;
             }
           }
         }
@@ -797,6 +823,14 @@
   background: url(../../../../../images/turtle/turtleMainBgWeb.svg) no-repeat 100% / cover;
   max-width: 100vw;
   width: unset;
+
+  .game-level-component {
+    .game-level-container {
+      .close-btn-mob {
+        background-color: gt.theme-var(game-btn-bg, null, $thememaplight, $cssvars);
+      }
+    }
+  }
 
   @include gm.media-breakpoint-down(md) {
     background-image: url(../../../../../images/turtle/turtleMainBg.png);
