--- a/src/web/stylesheets/common/sass/themes/_default.scss
+++ b/src/web/stylesheets/common/sass/themes/_default.scss
@@ -24,6 +24,7 @@ $thememaplight : (
   bg-2: #212527,
   bg-3: #ededed,
   bg-4: #000,
+  bg-5: #ffffff30,
   modal-close-btn-bg: #ff5a79,
   skeleton-bg: #13224125,
   tc-font-color: #000,
@@ -56,6 +57,7 @@ $thememapdark : (
   bg-2: #fff,
   bg-3: #ededed,
   bg-4: #000,
+  bg-5: #ffffff30,
   modal-close-btn-bg: #ff5a79,
   skeleton-bg: #13224125,
   tc-font-color: #000,
@@ -87,6 +89,7 @@ $cssvars : (
   bg-2: --bg-2,
   bg-3: --bg-3,
   bg-4: --bg-4,
+  bg-5: --bg-5,
   modal-close-btn-bg: --modal-close-btn-bg,
   skeleton-bg: --skeleton-bg,
   tc-font-color: --tc-font-color,
