first draft of working games webpage completed

--- a/src/web/stylesheets/common/sass/themes/_default.scss
+++ b/src/web/stylesheets/common/sass/themes/_default.scss
@@ -23,6 +23,8 @@ $thememaplight : (
   bg-1: #fff,
   bg-2: #212527,
   bg-3: #ededed,
+  bg-4: #e5e5e5,
+  bg-5: #fafafa,
   modal-close-btn-bg: #ff5a79,
   skeleton-bg: #13224125,
   tc-font-color: #000,
@@ -54,6 +56,8 @@ $thememapdark : (
   bg-1: #212527,
   bg-2: #fff,
   bg-3: #ededed,
+  bg-4: #e5e5e5,
+  bg-5: #fafafa,
   modal-close-btn-bg: #ff5a79,
   skeleton-bg: #13224125,
   tc-font-color: #000,
@@ -84,6 +88,8 @@ $cssvars : (
   bg-1: --bg-1,
   bg-2: --bg-2,
   bg-3: --bg-3,
+  bg-4: --bg-4,
+  bg-5: --bg-5,
   modal-close-btn-bg: --modal-close-btn-bg,
   skeleton-bg: --skeleton-bg,
   tc-font-color: --tc-font-color,
