--- a/src/web/stylesheets/common/pages/games/style.scss
+++ b/src/web/stylesheets/common/pages/games/style.scss
@@ -1,5 +1,6 @@
 @use '../../sass/themes/_default' as gt;
 @use '../../sass/base/_mixins' as gm;
+@use "sass:color";
 
 @import './_gameTheme.js';
 
@@ -21,46 +22,34 @@
   }
 }
 
-.container {
-  margin: auto;
-  margin-top: 1.5rem;
+.all-games-section,
+.recommended-games-section,
+.continue-playing-games-section {
+  margin-top: 1rem;
 }
 
-.all-game-cards {
+.all-game-cards,
+.recommended-game-cards,
+.continue-playing-game-cards {
   a {
     text-decoration: none;
     color: inherit;
   }
 }
 
+$game-cards-height: 12.1rem;
+
 .game-card {
   border-radius: 1rem;
   cursor: pointer;
 
-  .level-indicator-btn {
-    position: absolute;
-    top: 12px;
-    right: 10px;
-    border-radius: 0.75rem;
-    border: none;
-    padding: 4px 8px;
-    color: gt.theme-var(text-color-2);
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    background: gt.theme-var(game-level-indicator-btn-bg, null, $thememaplight, $cssvars);
-    backdrop-filter: blur(6px);
-
-    img {
-      width: 30px;
-      height: 30px;
-      margin-right: 0.2rem;
-    }
-  }
-
   .card-img-top {
     border-top-left-radius: 1rem;
     border-top-right-radius: 1rem;
+
+    @include gm.media-breakpoint-down(xxxl) {
+      @include gm.box(100%, $game-cards-height);
+    }
   }
 
   .game-title {
@@ -68,7 +57,6 @@
   }
 
   .card-body {
-    padding: 0.75rem;
     border-bottom-left-radius: 1rem;
     border-bottom-right-radius: 1rem;
     display: flex;
@@ -82,20 +70,632 @@
   }
 
   .play-btn {
-    margin: 0;
+    @include gm.flex-center();
+
     outline: none;
+    margin: 0;
     border: 0;
     border-radius: 50%;
-    padding: 0.65rem 0.5rem;
     background: gt.theme-var(bg-1);
-    display: flex;
-    justify-content: center;
-    align-items: center;
     box-shadow: 0 4px 4px rgba(0, 0, 0, 0.25);
+  }
+}
 
-    .play-game-icon {
-      width: 22px;
-      height: 20px;
+.game-card.variant1 {
+  .card-body {
+    padding: 0.75rem;
+  }
+
+  .play-btn {
+    @include gm.box(40px, 40px);
+  }
+
+  .play-game-icon {
+    @include gm.box(22px, 20px);
+  }
+}
+
+.game-card.variant0 {
+  position: relative;
+  overflow: hidden;
+
+  .level-indicator-btn {
+    @include gm.absolute-tr(12px, 10px);
+    @include gm.flex-center();
+
+    border: none;
+    border-radius: 0.75rem;
+    padding: 4px 8px;
+    color: gt.theme-var(text-color-2);
+    background: gt.theme-var(game-level-indicator-btn-bg, null, $thememaplight, $cssvars);
+    backdrop-filter: blur(6px);
+
+    img {
+      @include gm.box(30px, 30px);
+
+      margin-right: 0.2rem;
+    }
+
+    &:hover ~ .game-stats-container {
+      transform: translateY(0);
     }
   }
+
+  .card-body {
+    position: relative;
+    padding: 1.5rem 0.75rem;
+  }
+
+  .play-btn {
+    @include gm.absolute-tr(0, 20px);
+    @include gm.box(60px, 60px);
+    @include gm.flex-center(column);
+
+    padding-top: 1rem;
+    padding-bottom: 0.7rem;
+    transform: translateY(-50%);
+
+    .play-game-icon {
+      @include gm.box(32px, 20px);
+    }
+
+    .play-btn-text {
+      color: gt.theme-var(game-play-btn-text-color, null, $thememaplight, $cssvars);
+      font-size: 12px;
+    }
+  }
+
+  .game-stats-container {
+    position: absolute;
+    bottom: 0;
+    width: 100%;
+    border-radius: 1rem;
+    background-color: gt.theme-var(bg-4);
+    transform: translateY(100%);
+    transition: transform 0.3s ease-in-out;
+    z-index: 10;
+  }
+
+  .other-stats-with-level-progress-bar {
+    border-radius: 0.8rem;
+    padding: 0.75rem 1.12rem;
+    background-color: gt.theme-var(bg-1);
+  }
+
+  .level-progress-bar {
+    margin-top: 1rem;
+  }
+}
+
+$stat-icon-width: 30px;
+$stat-icon-height: 31px;
+
+.level-progress-indicator {
+  @include gm.flex-align-center();
+
+  padding: 0.75rem 1.12rem;
+
+  .level-indicator-text {
+    margin-left: 0.2rem;
+  }
+
+  .level-icon {
+    @include gm.box($stat-icon-width, $stat-icon-height);
+  }
+}
+
+.other-stats {
+  @include gm.flex-justify-align(null, space-between, center);
+
+  .game-stat {
+    @include gm.flex-align-center();
+  }
+
+  .game-stat-icon {
+    @include gm.box($stat-icon-width, $stat-icon-height);
+  }
+
+  .game-stat-text {
+    margin-left: 0.3rem;
+  }
+}
+
+.level-progress-bar {
+  @include gm.box(100%, 8px);
+
+  border-radius: 12px;
+  background-color: gt.theme-var(game-level-progress-bar-bg, null, $thememaplight, $cssvars);
+  margin-top: 1rem;
+
+  $color1: gt.theme-var(game-level-progress-gradient-1, null, $thememaplight, $cssvars);
+  $color2: gt.theme-var(game-level-progress-gradient-2, null, $thememaplight, $cssvars);
+
+  .level-progress {
+    height: 100%;
+    border-radius: inherit;
+    background-image: linear-gradient(to right, $color1, $color2);
+  }
+}
+
+.slide-up-animation {
+  animation: slide_up 0.5s ease;
+  animation-fill-mode: forwards;
+}
+
+.slide-down-animation {
+  animation: slide_down 0.5s ease;
+  animation-fill-mode: forwards;
+}
+
+$game-cards-width-after-xs: 90%;
+$game-cards-width-after-sm: 45%;
+$game-cards-width-after-ml: 35%;
+$game-cards-width-after-lg: 30%;
+$game-cards-width-after-xxl: 25%;
+
+.recommended-game-cards,
+.continue-playing-game-cards {
+  .swiper-slide {
+    width: $game-cards-width-after-xs;
+
+    @include gm.media-breakpoint-up(sm) {
+      width: $game-cards-width-after-sm;
+    }
+
+    @include gm.media-breakpoint-up(ml) {
+      width: $game-cards-width-after-ml;
+    }
+
+    @include gm.media-breakpoint-up(lg) {
+      width: $game-cards-width-after-lg;
+    }
+
+    @include gm.media-breakpoint-up(xxl) {
+      width: $game-cards-width-after-xxl;
+    }
+  }
+
+  .swiper-button-next,
+  .swiper-button-prev {
+    &:after {
+      font-size: 1.75rem;
+      font-weight: bolder;
+    }
+
+    &.swiper-button-disabled {
+      display: none;
+    }
+
+    top: 8%;
+    height: 100%;
+    padding: 0 2rem 0;
+  }
+
+  .swiper-button-next {
+    right: 0;
+    background: linear-gradient(to right, transparent, gt.theme-var(game-body-bg, null, $thememaplight, $cssvars));
+  }
+
+  .swiper-button-prev {
+    left: 0;
+    background: linear-gradient(to left, transparent, gt.theme-var(game-body-bg, null, $thememaplight, $cssvars));
+  }
+
+  .skeleton-game-cards-container {
+    @include gm.box(100%, 100%);
+
+    padding-bottom: 0.5rem;
+    overflow-x: scroll;
+  }
+
+  .skeleton-game-card {
+    @include gm.box($game-cards-width-after-xs, $game-cards-height);
+
+    margin-right: 1rem;
+    flex: none;
+
+    @include gm.media-breakpoint-up(sm) {
+      width: $game-cards-width-after-sm;
+    }
+
+    @include gm.media-breakpoint-up(ml) {
+      width: $game-cards-width-after-ml;
+    }
+
+    @include gm.media-breakpoint-up(lg) {
+      width: $game-cards-width-after-lg;
+    }
+  }
+}
+
+$hero-component-cards-border-radius: 1rem;
+$hero-component-cards-min-height: 210px;
+
+.hero-card {
+  display: flex;
+  align-items: stretch;
+  box-shadow: gt.theme-var(game-hero-card-box-shadow, null, $thememaplight, $cssvars);
+  background: url('../../../../../images/dashboard/dashboard-hero-bg-left.png') no-repeat center left / contain, url('../../../../../images/games/hero-bg-right.png') no-repeat center right/ contain, gt.theme-var(bg-1);
+  margin: 1rem 0;
+  border-radius: 0.875rem;
+  min-height: 14rem;
+
+  @include gm.media-breakpoint-up(xxl) {
+    min-height: 18rem;
+  }
+
+  @include gm.media-breakpoint-down(sm) {
+    background: url('../../../../../images/dashboard/dashboard-hero-bg-mobile.png') no-repeat center left / contain, gt.theme-var(bg-1);
+    min-height: unset;
+    padding: 1rem;
+  }
+
+  .hero-card-data {
+    padding: 2rem 0 0;
+
+    @include gm.media-breakpoint-down(sm) {
+      padding: 0;
+    }
+
+    @include gm.media-breakpoint-up(sm) {
+      display: flex;
+      flex-direction: column;
+      justify-content: space-around;
+    }
+
+    .hero-card-img {
+      background: url('../../../../../images/profile/default_user.png') no-repeat center center / cover;
+      border-radius: 50%;
+      position: relative;
+      width: 5rem;
+      height: 5rem;
+      left: 15%;
+      transform: translateX(50%);
+
+      @include gm.media-breakpoint-up(xxl) {
+        width: 8rem;
+        height: 8rem;
+      }
+
+      @include gm.media-breakpoint-up(md) {
+        left: 30%;
+      }
+
+      @include gm.media-breakpoint-up(lg) {
+        left: 25%;
+      }
+
+      @include gm.media-breakpoint-up(xl) {
+        left: 15%;
+      }
+
+      @include gm.media-breakpoint-down(sm) {
+        transform: translate(30%, 20%);
+      }
+    }
+
+    .hero-card-data-content {
+      display: flex;
+      justify-content: center;
+      width: 70%;
+      margin-top: 0.5rem;
+
+      @include gm.media-breakpoint-up(md) {
+        width: 100%;
+      }
+
+      @include gm.media-breakpoint-up(xl) {
+        width: 70%;
+      }
+
+      .hero-data {
+        display: flex;
+        align-items: center;
+        margin-left: 0.75rem;
+
+        p {
+          font-size: 1.125rem;
+          margin-left: 0.5rem;
+        }
+
+        img {
+          width: 2rem;
+          height: 2rem;
+        }
+      }
+    }
+  }
+
+  .leaderboard-with-total-levels-completed {
+    @include gm.flex-center();
+
+    .circle-progress {
+      min-height: $hero-component-cards-min-height;
+      background-color: gt.theme-var(game-body-bg, null, $thememaplight, $cssvars);
+      border-radius: 1rem;
+
+      svg {
+        width: 100%;
+        height: 140px;
+      }
+    }
+
+    .desktop-leaderboard-card {
+      height: $hero-component-cards-min-height;
+      background-color: gt.theme-var(game-body-bg, null, $thememaplight, $cssvars);
+
+      $leaderboard-card-vertical-padding: 1rem;
+      $leaderboard-card-horizontal-padding:1.25rem;
+
+      .leaderboard-card-title-with-your-rank {
+        @include gm.flex-justify-align(row, space-between, center);
+
+        border-bottom: 1px solid gt.theme-var(game-hero-leaderboard-br-color, null, $thememaplight, $cssvars);
+        padding: $leaderboard-card-vertical-padding $leaderboard-card-horizontal-padding;
+
+        .your-rank {
+          margin: 0;
+        }
+      }
+
+      .top-3 {
+        padding: $leaderboard-card-vertical-padding $leaderboard-card-horizontal-padding;
+      }
+    }
+  }
+
+  .skeleton-card {
+    min-height: $hero-component-cards-min-height;
+  }
+}
+
+.circle-progress {
+  display: grid;
+  place-content: center;
+
+  svg {
+    #gradient {
+      .start {
+        stop-color: gt.theme-var(game-level-progress-gradient-2, null, $thememaplight, $cssvars);
+      }
+
+      .end {
+        stop-color: gt.theme-var(game-level-progress-gradient-1, null, $thememaplight, $cssvars);
+      }
+    }
+
+    path {
+      &.progress-bar {
+        fill: none;
+        stroke: url(#gradient);
+      }
+    }
+  }
+}
+
+.leaderboard-card {
+  border-radius: 1rem;
+
+  .title {
+    color: gt.theme-var(game-hero-leaderboard-title-color, null, $thememaplight, $cssvars);
+    margin: 0;
+  }
+
+  .top-3 {
+    list-style: none;
+    margin: 0;
+    padding: 0;
+  }
+
+  .rank-listing {
+    display: flex;
+    justify-content: space-between;
+
+    .rank-number-with-name {
+      display: flex;
+      overflow: hidden;
+
+      span:nth-child(1) {
+        margin-right: 0.5rem;
+      }
+
+      span:nth-child(2) {
+        overflow: hidden;
+        text-overflow: ellipsis;
+        white-space: nowrap;
+      }
+    }
+
+    .rank-holder-earned-coins {
+      overflow: hidden;
+      text-overflow: ellipsis;
+      white-space: nowrap;
+    }
+  }
+}
+
+.mobile-hero-block {
+  .page-heading-more-info {
+    @include gm.flex-justify-align(row, space-between, center);
+
+    margin-top: 1rem;
+
+    .page-heading {
+      margin: 0;
+    }
+
+    $more-info-btn-text-color: gt.theme-var(game-more-info-btn-text-color, null, $thememaplight, $cssvars);
+
+    .more-info-btn {
+      border: none;
+      outline: none;
+      background: none;
+      color: $more-info-btn-text-color;
+    }
+  }
+
+  .other-stats {
+    padding: 1.12rem;
+    margin-top: 0.8rem;
+    border-radius: 1rem;
+    background-color: gt.theme-var(bg-1);
+  }
+}
+
+#viewMoreSheet {
+  .individual-game-summary-card {
+    background-color: gt.theme-var(bg-1);
+    padding: 1rem;
+    border-radius: 1rem;
+    margin-top: 1rem;
+    cursor: pointer;
+
+    .game-cover-with-title {
+      display: flex;
+
+      .game-cover {
+        flex-basis: 30%;
+
+        img {
+          @include gm.box(100%, 100%);
+
+          border-radius: 1rem;
+        }
+      }
+
+      .title-with-level-progress-indicator {
+        flex-basis: 70%;
+        margin-left: 0.5rem;
+      }
+
+      .level-progress-indicator {
+        padding: 0;
+      }
+    }
+
+    .other-stats-with-progress-bar {
+      margin-top: 0.5rem;
+      background-color: gt.theme-var(bg-5);
+      padding: 0.75rem 1rem;
+      border-radius: 1rem;
+    }
+  }
+
+  .mobile-total-gameprogress-coins {
+    display: flex;
+    background-color: gt.theme-var(bg-1);
+    padding: 1rem;
+    border-radius: 1rem;
+    margin-top: 1rem;
+
+    .mobile-circle-progress {
+      flex-grow: 1;
+
+      svg {
+        width: 100%;
+        height: 140px;
+      }
+    }
+
+    .coins-earned-with-average-time {
+      @include gm.flex-center();
+
+      flex-grow: 1;
+
+      .coins-earned {
+        @include gm.flex-align-center();
+
+        .hkcoin-icon img {
+          width: calc($stat-icon-width + 15px);
+          height: calc($stat-icon-height + 15px);
+          margin-right: 0.6rem;
+        }
+
+        .coins-earned-subtitle {
+          margin: 0;
+          margin-bottom: 0.5rem;
+          color: gt.theme-var(text-color-4);
+        }
+
+        .coins-earned {
+          margin: 0;
+        }
+      }
+    }
+  }
+
+  .mobile-leaderboard-card {
+    padding: 1rem;
+    background-color: gt.theme-var(bg-1);
+    margin: 1rem 0 1rem 0;
+
+    .title {
+      text-align: center;
+    }
+
+    .your-rank {
+      margin-top: 3rem;
+      margin-bottom: 3rem;
+      text-align: center;
+    }
+
+    .mobile-show-leaderboard-btn {
+      padding: 0.8rem 1.5rem;
+      border-radius: 0.75rem;
+      border: 1px solid gt.theme-var(game-leaderboard-button-bg, null, $thememaplight, $cssvars);
+      background-color: gt.theme-var(game-leaderboard-button-bg, null, $thememaplight, $cssvars);
+      color: gt.theme-var(text-color-2);
+
+      &:hover {
+        color: gt.theme-var(game-leaderboard-button-bg, null, $thememaplight, $cssvars);
+        background-color: gt.theme-var(bg-1);
+      }
+    }
+  }
+}
+
+$other-stats-margin-top: 0.8rem;
+
+.skeleton-game-card,
+.skeleton-card {
+  border-radius: 1rem;
+  animation: refresh 2.5s ease-out infinite;
+  background-image: linear-gradient(90deg, gt.theme-var(text-color-6), gt.theme-var(bg-3) 30px, gt.theme-var(skeleton-bg) 60px);
+  background-size: 200%;
+}
+
+.other-stats-skeleton {
+  border-radius: 1rem;
+  margin-top: $other-stats-margin-top;
+  min-height: 4rem;
+}
+
+.all-games-section {
+  .skeleton-game-card {
+    height: $game-cards-height;
+  }
+}
+
+@keyframes refresh {
+  0% {
+    background-position: -100%;
+  }
+
+  100% {
+    background-position: 100%;
+  }
+}
+
+::-webkit-scrollbar {
+  width: 0.5rem;
+  height: 0.5rem;
+}
+
+::-webkit-scrollbar-track {
+  background: transparent;
+}
+
+::-webkit-scrollbar-thumb {
+  background-color: gt.theme-var(skeleton-bg);
+  border-radius: 0.5rem;
 }
