--- a/src/web/stylesheets/common/sass/themes/_default.scss
+++ b/src/web/stylesheets/common/sass/themes/_default.scss
@@ -10,6 +10,8 @@ $thememaplight : (
   text-color-9:#ffeab2,
   text-color-10:#b66d00,
   text-color-11:#ffdd81,
+  text-color-12: #00c5ff,
+  text-color-13: #505659,
   nav-bg-blue: #0051ff,
   nav-bg-green: #24aa70,
   nav-bg-lightblue: #00baff,
@@ -25,9 +27,13 @@ $thememaplight : (
   bg-3: #ededed,
   bg-4: #000,
   bg-5: #ffffff30,
+  bg-6: #00000075,
   modal-close-btn-bg: #ff5a79,
   skeleton-bg: #13224125,
   tc-font-color: #000,
+  overlay1: #17181875,
+  blue-gradient-1: #00baff,
+  blue-gradient-2: #0051ff,
 );
 // just copied the light theme colors to the dark for now
 // TODO: make this a real dark theme with appropriate colors
@@ -43,6 +49,8 @@ $thememapdark : (
   text-color-9:#ffeab2,
   text-color-10:#b66d00,
   text-color-11:#ffdd81,
+  text-color-12: #00c5ff,
+  text-color-13: #505659,
   nav-bg-blue: #0051ff,
   nav-bg-green: #24aa70,
   nav-bg-lightblue: #00baff,
@@ -58,9 +66,13 @@ $thememapdark : (
   bg-3: #ededed,
   bg-4: #000,
   bg-5: #ffffff30,
+  bg-6: #00000075,
   modal-close-btn-bg: #ff5a79,
   skeleton-bg: #13224125,
   tc-font-color: #000,
+  overlay1: #17181875,
+  blue-gradient-1: #00baff,
+  blue-gradient-2: #0051ff,
 );
 
 $cssvars : (
@@ -75,6 +87,8 @@ $cssvars : (
   text-color-9: --text-color-9,
   text-color-10: --text-color-10,
   text-color-11: --text-color-11,
+  text-color-12: --text-color-12,
+  text-color-13: --text-color-13,
   nav-bg-blue: --nav-bg-blue,
   nav-bg-green: --nav-bg-green,
   nav-bg-lightblue: --nav-bg-lightblue,
@@ -90,9 +104,13 @@ $cssvars : (
   bg-3: --bg-3,
   bg-4: --bg-4,
   bg-5: --bg-5,
+  bg-6: --bg-6,
   modal-close-btn-bg: --modal-close-btn-bg,
   skeleton-bg: --skeleton-bg,
   tc-font-color: --tc-font-color,
+  overlay1: --overlay1,
+  blue-gradient-1: --blue-gradient-1,
+  blue-gradient-2: --blue-gradient-2,
 );
 
 @mixin spread-map($map: (), $cssMap: $cssvars) {
