--- a/src/web/stylesheets/common/sass/components/_gameLevelComponent.scss
+++ b/src/web/stylesheets/common/sass/components/_gameLevelComponent.scss
@@ -8,7 +8,8 @@
   width: 100%;
   top: 0;
   z-index: 1000;
-  background: #17181875;
+  // background: #17181875;
+  background: gt.theme-var(overlay1);
   backdrop-filter: blur(2rem);
 
   @include gm.media-breakpoint-down(md) {
