--- a/src/web/stylesheets/common/sass/themes/_default.scss
+++ b/src/web/stylesheets/common/sass/themes/_default.scss
@@ -25,6 +25,7 @@ $thememaplight : (
   bg-3: #ededed,
   bg-4: #e5e5e5,
   bg-5: #fafafa,
+  bg-6: #f5f5f5,
   modal-close-btn-bg: #ff5a79,
   skeleton-bg: #13224125,
   tc-font-color: #000,
@@ -58,6 +59,7 @@ $thememapdark : (
   bg-3: #ededed,
   bg-4: #e5e5e5,
   bg-5: #fafafa,
+  bg-6: #f5f5f5,
   modal-close-btn-bg: #ff5a79,
   skeleton-bg: #13224125,
   tc-font-color: #000,
@@ -90,6 +92,7 @@ $cssvars : (
   bg-3: --bg-3,
   bg-4: --bg-4,
   bg-5: --bg-5,
+  bg-6: --bg-6,
   modal-close-btn-bg: --modal-close-btn-bg,
   skeleton-bg: --skeleton-bg,
   tc-font-color: --tc-font-color,
