--- a/src/web/stylesheets/common/sass/themes/_default.scss
+++ b/src/web/stylesheets/common/sass/themes/_default.scss
@@ -26,12 +26,13 @@ $thememaplight : (
   bg-2: #212527,
   bg-3: #ededed,
   bg-4: #000,
-  bg-5: #ffffff30,
-  bg-6: #00000075,
+  bg-5: #ffffff4d,
+  bg-6: #000000bf,
+  bg-7: #adebfdbf,
   modal-close-btn-bg: #ff5a79,
-  skeleton-bg: #13224125,
+  skeleton-bg: #13224140,
   tc-font-color: #000,
-  overlay1: #17181875,
+  overlay1: #171818bf,
   blue-gradient-1: #00baff,
   blue-gradient-2: #0051ff,
 );
@@ -65,12 +66,13 @@ $thememapdark : (
   bg-2: #fff,
   bg-3: #ededed,
   bg-4: #000,
-  bg-5: #ffffff30,
-  bg-6: #00000075,
+  bg-5: #ffffff4d,
+  bg-6: #000000bf,
+  bg-7: #adebfdbf,
   modal-close-btn-bg: #ff5a79,
-  skeleton-bg: #13224125,
+  skeleton-bg: #13224140,
   tc-font-color: #000,
-  overlay1: #17181875,
+  overlay1: #171818bf,
   blue-gradient-1: #00baff,
   blue-gradient-2: #0051ff,
 );
@@ -105,6 +107,7 @@ $cssvars : (
   bg-4: --bg-4,
   bg-5: --bg-5,
   bg-6: --bg-6,
+  bg-7: --bg-7,
   modal-close-btn-bg: --modal-close-btn-bg,
   skeleton-bg: --skeleton-bg,
   tc-font-color: --tc-font-color,
