--- a/src/web/stylesheets/common/pages/turtle/style.scss
+++ b/src/web/stylesheets/common/pages/turtle/style.scss
@@ -819,6 +819,7 @@
 
 .turtle-home-container {
   background: url(../../../../../images/turtle/turtleBgWeb.svg) no-repeat 100% / cover;
+  background-position: left center;
 
   @include gm.media-breakpoint-down(md) {
     background-image: url(../../../../../images/turtle/turtleBg.png);
@@ -827,6 +828,7 @@
 
 .turtle-main-container {
   background: url(../../../../../images/turtle/turtleMainBgWeb.svg) no-repeat 100% / cover;
+  background-position: right center;
   max-width: 100vw;
   width: unset;
 
