--- a/src/web/stylesheets/common/pages/ide/style.scss
+++ b/src/web/stylesheets/common/pages/ide/style.scss
@@ -6,349 +6,376 @@
 
 @include gt.populate-theme($thememaplight, $thememapdark, $cssvars);
 
-.ide-container {
-  nav {
-    background-color: gt.theme-var(ide-nav-bg, null, $thememaplight, $cssvars);
+nav {
+  background-color: gt.theme-var(ide-nav-bg, null, $thememaplight, $cssvars);
 
-    .navigation-container {
-      .navigation-item {
-        &.active {
-          background-color: gt.theme-var(ide-nav-active-bg, null, $thememaplight, $cssvars);
+  .navigation-container {
+    .navigation-item {
+      &.active {
+        background-color: gt.theme-var(ide-nav-active-bg, null, $thememaplight, $cssvars);
+      }
+    }
+  }
+}
+
+.container-fluid {
+  margin: 0;
+  padding: 0;
+}
+
+// common styles for both desktop and mobile resolutions
+#editor {
+  background-color: gt.theme-var(ide-bg-2, null, $thememaplight, $cssvars);
+  color: gt.theme-var(ide-text-color-1, null, $thememaplight, $cssvars);
+
+  .ace_gutter {
+    background-color: gt.theme-var(ide-bg-1, null, $thememaplight, $cssvars);
+    color: gt.theme-var(ide-text-color-1, null, $thememaplight, $cssvars);
+  }
+}
+
+.input-box,
+.output-box {
+  width: 100%;
+  background-color: gt.theme-var(ide-bg-2, null, $thememaplight, $cssvars);
+  color: gt.theme-var(ide-text-color-1, null, $thememaplight, $cssvars);
+  resize: none;
+}
+
+.output-box {
+  $color: map-get($thememaplight, ide-text-color-1);
+
+  color: darken($color, 23%);
+
+  pre {
+    font-size: 1rem;
+    color: gt.theme-var(text-color-2);
+
+    img {
+      margin-right: 0.5rem;
+    }
+  }
+}
+
+.language-selector-with-back-btn {
+  padding: 0.75rem;
+  background-color: gt.theme-var(bg-1);
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+
+  .back-btn-with-title {
+    display: flex;
+    align-items: center;
+
+    .back-btn {
+      border: none;
+      background: none;
+    }
+  }
+
+  .dropdown-toggle {
+    border-radius: 0.5rem;
+    padding: 0.75rem 1rem;
+    background-color: gt.theme-var(bg-1);
+    color: gt.theme-var(text-color-1);
+    display: flex;
+    align-items: center;
+    gap: 0.5rem;
+
+    .selected-language-display-name {
+      display: inline-block;
+      text-align: left;
+      pointer-events: none;
+    }
+
+    &:after {
+      content: none;
+    }
+
+    .dropdown-icon {
+      pointer-events: none;
+      transition: transform 0.5 ease;
+    }
+
+    .dropdown-icon.rotate180 {
+      transform: rotate(180deg);
+    }
+  }
+
+  #language-selector-dropdown {
+    min-width: 100%;
+    height: 500px;
+    margin-top: 0.5rem;
+    border-radius: 0.7rem;
+    background: gt.theme-var(bg-1);
+    overflow-y: scroll;
+  }
+}
+
+.desktop-container {
+  .main-content {
+    display: flex;
+    flex-direction: column;
+    min-height: calc(100vh - 81.14px);
+  }
+
+  .language-selector-with-back-btn {
+    .dropdown-toggle {
+      .selected-language-display-name {
+        min-width: 300px;
+      }
+    }
+  }
+
+  .code-editor-with-input-output {
+    position: relative;
+    display: flex;
+    flex-grow: 1;
+  }
+
+  .editor-container {
+    position: relative;
+    width: 50%;
+    transition: width 0.5s ease;
+    z-index: 10;
+
+    &.full-width {
+      width: 100%;
+    }
+
+    #editor {
+      position: relative;
+      height: 100%;
+    }
+
+    .toggle-full-width-editor {
+      position: absolute;
+      top: 10px;
+      right: 20px;
+      z-index: 10;
+      border: none;
+      background: none;
+
+      i {
+        color: gt.theme-var(bg-1);
+        pointer-events: none;
+        transition: transform 0.5s ease;
+
+        &.rotate180 {
+          transform: rotate(180deg);
         }
+      }
+    }
+
+    .run-code-btn.btn-primary {
+      position: absolute;
+      bottom: 20px;
+      right: 20px;
+      z-index: 10;
+      background-color: gt.theme-var(ide-btn-bg, null, $thememaplight, $cssvars);
+      color: gt.theme-var(text-color-2);
+      border-radius: 8px;
+      border-color: gt.theme-var(ide-btn-bg, null, $thememaplight, $cssvars);
+      display: flex;
+      align-items: center;
+      gap: 0.5rem;
+
+      &:hover {
+        $base-bg: map-get($thememaplight, ide-btn-bg);
+        $darkened-bg: darken($base-bg, 10%);
+
+        background-color: $darkened-bg;
+      }
+
+      span, i {
+        pointer-events: none;
+      }
+    }
+  }
+
+  .input-output-container {
+    position: absolute;
+    right: 0;
+    width: 50%;
+    height: 100%;
+    padding: 1rem 1.5rem;
+    background-color: gt.theme-var(ide-bg-1, null, $thememaplight, $cssvars);
+    display: flex;
+    flex-direction: column;
+    gap: 1rem;
+
+    .input-box,
+    .output-box {
+      padding: 1rem;
+      border-radius: 0.75rem;
+    }
+
+    .input-box {
+      flex-basis: 30%;
+      border: none;
+    }
+
+    .output-box {
+      flex-basis: 70%;
+    }
+  }
+}
+
+.mobile-container {
+  .grecaptcha-badge {
+    display: none;
+  }
+
+  nav {
+    display: none;
+  }
+
+  nav#mobile-nav {
+    display: block;
+
+    .logo {
+      margin: 1.2rem;
+    }
+
+    .dashboard-link {
+      order: 1;
+      color: white;
+      margin: 1.2rem;
+    }
+  }
+
+  .main-content {
+    display: flex;
+    flex-direction: column;
+    height: calc(100vh - 64.52px);
+  }
+
+  .language-selector-with-back-btn {
+    .dropdown-toggle {
+      .selected-language-display-name {
+        min-width: 100px;
       }
     }
   }
 
   .container-fluid {
-    margin: 0;
-    padding: 0;
+    flex-grow: 1;
   }
 
-  // common styles for both desktop and mobile resolutions
+  .tab-content {
+    height: 100%;
+  }
+
+  .tab-pane {
+    height: 100%;
+  }
+
   #editor {
-    background-color: gt.theme-var(ide-bg-2, null, $thememaplight, $cssvars);
-    color: gt.theme-var(ide-text-color-1, null, $thememaplight, $cssvars);
-
-    .ace_gutter {
-      background-color: gt.theme-var(ide-bg-1, null, $thememaplight, $cssvars);
-      color: gt.theme-var(ide-text-color-1, null, $thememaplight, $cssvars);
-    }
-  }
-
-  .input-box,
-  .output-box {
+    position: relative;
     width: 100%;
-    background-color: gt.theme-var(ide-bg-2, null, $thememaplight, $cssvars);
-    color: gt.theme-var(ide-text-color-1, null, $thememaplight, $cssvars);
-    resize: none;
+    height: 100%;
   }
 
-  .output-box {
-    $color: map-get($thememaplight, ide-text-color-1);
-
-    color: darken($color, 23%);
-
-    pre {
-      color: gt.theme-var(text-color-2);
-    }
+  footer {
+    position: fixed;
+    bottom: 0;
+    width: 100%;
+    z-index: 10;
+    background-color: gt.theme-var(ide-bg-1, null, $thememaplight, $cssvars);
   }
 
-  .language-selector-with-back-btn {
-    padding: 1rem 0.75rem;
-    background-color: gt.theme-var(bg-1);
+  .input-box-drawer {
+    position: absolute;
+    width: 100%;
+    transform: translateY(-100%);
+  }
+
+  .input-draw-btn {
+    width: 100%;
+    border: none;
+    border-radius: 0;
+    padding: 1rem;
+    background-color: gt.theme-var(ide-bg-1, null, $thememaplight, $cssvars);
+    color: gt.theme-var(text-color-2);
     display: flex;
     justify-content: space-between;
+
+    .fa-chevron-up {
+      transition: transform 0.5s ease;
+    }
+
+    .fa-chevron-up.rotate180 {
+      transform: rotate(180deg);
+    }
+  }
+
+  .input-box-container {
+    background-color: gt.theme-var(ide-bg-1, null, $thememaplight, $cssvars);
+    overflow: hidden;
+    max-height: 0;
+    transition: max-height 0.5s ease-in-out;
+
+    .input-box {
+      border-radius: 0.75rem;
+      padding: 1rem;
+    }
+
+    &.show {
+      max-height: 200px;
+    }
+  }
+
+  .output-box-container {
+    background-color: gt.theme-var(ide-bg-1, null, $thememaplight, $cssvars);
+    padding: 1rem;
+
+    .output-box {
+      padding: 1rem;
+      border-radius: 0.75rem;
+      height: calc(100% - 100px);
+    }
+  }
+
+  .footer-tab {
+    position: relative;
+    width: 100%;
+    border: none;
+    border-radius: 0;
+    background-color: gt.theme-var(ide-bg-1, null, $thememaplight, $cssvars);
+    color: gt.theme-var(text-color-2);
+    display: flex;
+    flex-direction: column;
     align-items: center;
+    gap: 0.3rem;
 
-    .back-btn-with-title {
-      display: flex;
-      align-items: center;
-
-      .back-btn {
-        border: none;
-        background: none;
-      }
+    .tab-icon {
+      width: 21px;
+      height: 25px;
     }
 
-    .dropdown-toggle {
-      border-radius: 0.5rem;
-      padding: 0.75rem 1rem;
+    &.active {
+      border: none;
+      background-color: inherit;
+    }
+
+    &.active:before {
+      content: "";
+      position: absolute;
+      top: 0;
+      width: 80%;
+      height: 3px;
+      border-bottom-left-radius: 1rem;
+      border-bottom-right-radius: 1rem;
       background-color: gt.theme-var(bg-1);
-      color: gt.theme-var(text-color-1);
-      display: flex;
-      align-items: center;
-      gap: 0.5rem;
+      z-index: 1;
+    }
 
-      .selected-language-display-name {
-        display: inline-block;
-        text-align: left;
+    &.run-code-btn {
+      color: gt.theme-var(ide-text-color-2, null, $thememaplight, $cssvars);
+
+      img {
         pointer-events: none;
-      }
-
-      &:after {
-        content: none;
-      }
-
-      .dropdown-icon {
-        pointer-events: none;
-        transition: transform 0.5 ease;
-      }
-
-      .dropdown-icon.rotate180 {
-        transform: rotate(180deg);
-      }
-    }
-
-    #language-selector-dropdown {
-      min-width: 95%;
-      height: 500px;
-      margin-top: 0.5rem;
-      border-radius: 0.7rem;
-      background: gt.theme-var(bg-1);
-      overflow-y: scroll;
-    }
-  }
-
-  .desktop-container {
-    min-height: calc(100vh - 82.14px);
-    display: flex;
-    flex-direction: column;
-
-    .language-selector-with-back-btn {
-      .dropdown-toggle {
-        .selected-language-display-name {
-          min-width: 300px;
-        }
-      }
-    }
-
-    .code-editor-with-input-output {
-      position: relative;
-      display: flex;
-      flex-grow: 1;
-    }
-
-    .editor-container {
-      position: relative;
-      width: 50%;
-      transition: width 0.5s ease;
-      z-index: 10;
-
-      &.full-width {
-        width: 100%;
-      }
-
-      #editor {
-        position: relative;
-        height: 100%;
-      }
-
-      .toggle-full-width-editor {
-        position: absolute;
-        top: 10px;
-        right: 20px;
-        z-index: 10;
-        border: none;
-        background: none;
-
-        i {
-          color: gt.theme-var(bg-1);
-          pointer-events: none;
-          transition: transform 0.5s ease;
-
-          &.rotate180 {
-            transform: rotate(180deg);
-          }
-        }
-      }
-
-      .run-code-btn.btn-primary {
-        position: absolute;
-        bottom: 20px;
-        right: 20px;
-        z-index: 10;
-        background-color: gt.theme-var(ide-btn-bg, null, $thememaplight, $cssvars);
-        color: gt.theme-var(text-color-2);
-        border-radius: 8px;
-        border-color: gt.theme-var(ide-btn-bg, null, $thememaplight, $cssvars);
-        display: flex;
-        align-items: center;
-        gap: 0.5rem;
-
-        &:hover {
-          $base-bg: map-get($thememaplight, ide-btn-bg);
-          $darkened-bg: darken($base-bg, 10%);
-
-          background-color: $darkened-bg;
-        }
-
-        #loader-partial:after {
-          top: 0;
-          left: 10px;
-          width: 25px;
-          height: 25px;
-        }
-      }
-    }
-
-    .input-output-container {
-      position: absolute;
-      right: 0;
-      width: 50%;
-      height: 100%;
-      padding: 1rem 1.5rem;
-      background-color: gt.theme-var(ide-bg-1, null, $thememaplight, $cssvars);
-      display: flex;
-      flex-direction: column;
-      gap: 1rem;
-
-      .input-box,
-      .output-box {
-        padding: 1rem;
-        border-radius: 0.75rem;
-      }
-
-      .input-box {
-        flex-basis: 30%;
-        border: none;
-      }
-
-      .output-box {
-        flex-basis: 70%;
-      }
-    }
-  }
-
-  .mobile-container {
-    height: calc(100vh - 146.14px);
-    display: flex;
-    flex-direction: column;
-
-    @include gm.media-breakpoint-up(ml) {
-      height: calc(100vh - 82.14px);
-    }
-
-    .language-selector-with-back-btn {
-      .dropdown-toggle {
-        .selected-language-display-name {
-          min-width: 100px;
-        }
-      }
-    }
-
-    .container-fluid {
-      flex-grow: 1;
-    }
-
-    .tab-content {
-      height: 100%;
-    }
-
-    .tab-pane {
-      height: 100%;
-    }
-
-    #editor {
-      position: relative;
-      width: 100%;
-      height: 100%;
-    }
-
-    footer {
-      position: fixed;
-      bottom: 0;
-      width: 100%;
-      z-index: 10;
-      background-color: gt.theme-var(ide-bg-1, null, $thememaplight, $cssvars);
-    }
-
-    .input-box-drawer {
-      position: absolute;
-      width: 100%;
-      transform: translateY(-100%);
-    }
-
-    .input-draw-btn {
-      width: 100%;
-      border: none;
-      border-radius: 0;
-      padding: 1rem;
-      background-color: gt.theme-var(ide-bg-1, null, $thememaplight, $cssvars);
-      color: gt.theme-var(text-color-2);
-      display: flex;
-      justify-content: space-between;
-
-      .fa-chevron-up {
-        transition: transform 0.5s ease;
-      }
-
-      .fa-chevron-up.rotate180 {
-        transform: rotate(180deg);
-      }
-    }
-
-    .input-box-container {
-      background-color: gt.theme-var(ide-bg-1, null, $thememaplight, $cssvars);
-      overflow: hidden;
-      max-height: 0;
-      transition: max-height 0.5s ease-in-out;
-
-      .input-box {
-        border-radius: 0.75rem;
-        padding: 1rem;
-      }
-
-      &.show {
-        max-height: 200px;
-      }
-    }
-
-    .output-box-container {
-      background-color: gt.theme-var(ide-bg-1, null, $thememaplight, $cssvars);
-      padding: 1rem;
-
-      .output-box {
-        padding: 1rem;
-        border-radius: 0.75rem;
-        height: calc(100% - 100px);
-      }
-    }
-
-    .footer-tab {
-      position: relative;
-      width: 100%;
-      border: none;
-      border-radius: 0;
-      background-color: gt.theme-var(ide-bg-1, null, $thememaplight, $cssvars);
-      color: gt.theme-var(text-color-2);
-      display: flex;
-      flex-direction: column;
-      align-items: center;
-      gap: 0.3rem;
-
-      .tab-icon {
-        width: 21px;
-        height: 25px;
-      }
-
-      &.active {
-        border: none;
-      }
-
-      &.active:before {
-        content: "";
-        position: absolute;
-        top: 0;
-        width: 80%;
-        height: 3px;
-        border-bottom-left-radius: 1rem;
-        border-bottom-right-radius: 1rem;
-        background-color: gt.theme-var(bg-1);
-        z-index: 1;
-      }
-
-      &.run-code-btn {
-        color: gt.theme-var(ide-text-color-2, null, $thememaplight, $cssvars);
       }
     }
   }
@@ -356,14 +383,19 @@
 
 .keep-code-changes-modal {
   .modal-content {
-    padding: 1rem;
+    padding: 1.25rem;
   }
 
   .yes-no-btn-container {
     width: 100%;
     display: flex;
-    justify-content: space-between;
+    justify-content: space-around;
     align-items: center;
+
+    .btn {
+      border-radius: 10px;
+      padding: 0.5rem 2rem;
+    }
 
     .btn-primary {
       color: gt.theme-var(text-color-2);
